--- a/gsmcss.css
+++ b/gsmcss.css
@@ -15233,7 +15233,10 @@ button, input, optgroup, select, textarea {
         top: 2px;
         right: 0;
     }
-
+    .product-tab__accordion {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
     .product-tab__title {
         font-weight: bold;
         font-size: 16px;
@@ -15291,6 +15294,17 @@ button, input, optgroup, select, textarea {
     }
     .product-tabs__body {
         margin: 0 -20px;
+    }
+    .product-tabs__body .user-content-styles {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .product-tab__main .user-content-styles-show {
+        margin-left: 20px;
+    }
+    .user-content-styles .product-tab__title {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
