--- a/gsmcss.css
+++ b/gsmcss.css
@@ -14629,6 +14629,47 @@ button, input, optgroup, select, textarea {
         margin-top: 0;
         margin-bottom: 0;
     }
+
+    .catalog .page-side {
+        position: fixed;
+        z-index: 110;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100%;
+        overflow-y: auto;
+    }
+    .catalog .page-side:after {
+        display: none;
+    }
+    .filter__line {
+        max-width: 100%;
+    }
+    .filter__label {
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 19px;
+        padding: 0;
+        margin-bottom: 28px;
+    }
+    .filter__checkbox {
+        padding: 0;
+    }
+    .filter__checkbox > span {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        padding: 0;
+        padding-left: 32px;
+    }
+    .filter__checkbox > span:before {
+        width: 20px;
+        height: 20px;
+        top: calc(50% - 10px);
+    }
+    .filter__checkbox:not(:last-child) {
+        margin-bottom: 18px;
+    }
 }
 
 /* DJRestyle - product card */
@@ -16067,10 +16108,10 @@ button, input, optgroup, select, textarea {
         left: 0;
         right: 0;
         bottom: 0;
-        height: 50px;
+        height: 60px;
         background: #3084b9;
         background: linear-gradient(to right, #3084b9 0%, #54a27a 100%);
-        z-index: 10;
+        z-index: 110;
         transform: translateX(0);
         width: 100%;
     }
